--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,54 +1,578 @@
+/* CDN 服务仅供平台体验和调试使用，平台不承诺服务的稳定性，企业客户需下载字体包自行发布使用并做好备份。 */
+@font-face {
+  font-family: "思源宋体 Light";
+  font-weight: 300;
+  src: url("//at.alicdn.com/wf/webfont/oUdqaQgJTW0y/NdXCR-6ifPCUMahze479P.woff2") format("woff2"),
+  url("//at.alicdn.com/wf/webfont/oUdqaQgJTW0y/phhbPtPR7JIsAcS6TJMrx.woff") format("woff");
+  font-display: swap;
+}
+
 .el-container {
   height: 100vh;
   overflow: hidden;
 }
+
 $prefix: common;
 .#{$prefix}-header {
   background: rgb(48, 55, 66);
-  .#{$prefix}-header-logo{
+
+  .#{$prefix}-header-logo {
     width: 80px;
   }
-  .#{$prefix}-header-title{
-    color:#fff
+
+  .#{$prefix}-header-title {
+    color: #fff
   }
 }
+
+$common-background: #fff;
+$new-body-background: #f0f2f5;
+.new-admin-collapse .new-admin-sidebar .ant-menu-inline-collapsed {
+  width: 100%;
+}
+
+$text-color: rgba(0, 0, 0, .85);
+.new-admin-fixed-header:not(.new-admin-fixed-body) .new-admin-tabs {
+  position: fixed;
+  right: 0;
+  top: 48px;
+  height: 40px;
+  z-index: 99;
+  transition: left .3s cubic-bezier(.2, 0, 0, 1) 0s;
+}
+
 .#{$prefix}-aside {
   background: rgb(48, 55, 65);
 }
-.flex-float{
+
+.flex-float {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.flex{
+
+.flex {
   display: flex;
   align-items: center;
 }
-.main-content{
+
+.main-content {
   padding: 20px;
   box-sizing: border-box;
   display: block;
   width: 100%;
   margin-top: 30px;
   background: #fff;
-  .main-content-header{
+
+  .main-content-header {
     display: flex;
     justify-content: space-between;
   }
 
 }
+
 /**
 水平剧中登陆 flex方法
  */
-.login-wrap{
+.login-wrap {
+
   width: 100vw;
   height: 100vh;
   display: flex;
-  background: cornflowerblue;
+  background: url("https://api.ixiaowai.cn/mcapi/mcapi2.php") no-repeat;
 }
-.login-form{
-  background: #fff;
-  margin: auto;
+
+.login-form {
+  width: 25%;
+  background: #1f1f1f;
+  box-shadow: 12px 12px 12px #333;
+  margin: auto auto auto 100px;
   padding: 35px 55px 30px 35px;
-  border-radius: 5px;
+  border-radius: 30px;
+}
+
+
+.new-admin-layout {
+  background: $new-body-background;
+}
+
+.new-admin-show-tabs:not(.new-admin-tab-card):not(.new-admin-head-dark) .new-admin-header {
+  box-shadow: 210px -1px 0 var(--border-color-split) inset;
+  transition: padding-left .3s cubic-bezier(.2, 0, 0, 1) 0s, box-shadow .3s cubic-bezier(.2, 0, 0, 1) 0s;
+}
+
+//.new-admin-responsive .new-admin-body, .new-admin-responsive .new-admin-header {
+//  padding-left: 0 !important;
+//  width: 100% !important;
+//}
+
+.new-admin-responsive.new-admin-show-tabs:not(.new-admin-tab-card):not(.new-admin-head-dark) .new-admin-header {
+  box-shadow: 0 -1px 0 #f0f0f0 inset !important;
+}
+
+@media screen and (max-width: 768px) {
+  .new-admin-responsive .new-admin-body, .new-admin-responsive .new-admin-header {
+    padding-left: 0 !important;
+    width: 100% !important;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .new-admin-responsive.new-admin-collapse .new-admin-sidebar, .new-admin-responsive.new-admin-collapse .new-admin-logo {
+    left: -210px !important;
+    box-shadow: none !important;
+  }
+}
+
+.new-admin-side-dark .new-admin-logo {
+  color: #fff;
+  box-shadow: var(--logo-dark-shadow);
+  background: var(--sidebar-background);
+}
+
+.new-admin-header .new-admin-logo {
+  width: 200px;
+  height: 48px;
+  //box-shadow: #fff;
+  background: $common-background;
+  transition: width .3s cubic-bezier(.2, 0, 0, 1) 0s, left .3s cubic-bezier(.2, 0, 0, 1) 0s, box-shadow .3s cubic-bezier(.2, 0, 0, 1) 0s;
+  font-weight: 600;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+  font-size: 18px;
+  //color: $common-background;
+  white-space: nowrap;
+  position: relative;
+  overflow: hidden;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.new-admin-header .new-admin-header-tool {
+  display: flex;
+  flex-shrink: 0;
+  padding: 0 12px;
+}
+
+.ant-layout-header {
+  padding: 0;
+
+}
+
+.new-admin-header .new-admin-breadcrumb {
+  flex-shrink: 0;
+}
+
+.new-admin-header .new-admin-header-tool {
+  display: flex;
+  flex-shrink: 0;
+  padding: 0 12px;
+}
+
+.new-admin-header .new-admin-header-tool .new-admin-header-tool-item {
+  padding: 0 12px;
+  font-size: 14px;
+  transition: color .2s, background-color .2s;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 767px) {
+  .hidden-sm-and-down {
+    display: none !important;
+  }
+}
+
+.new-admin-header .new-admin-header-tool .new-admin-header-tool-item {
+  padding: 0 12px;
+  font-size: 14px;
+  transition: color .2s, background-color .2s;
+  cursor: pointer;
+}
+
+.new-admin-sidebar > .new-admin-sidebar-menus {
+  flex: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.new-admin-sidebar > .new-admin-sidebar-menus > .ant-menu {
+  border: none;
+  background: none;
+  transition: none;
+}
+
+.ant-menu-inline {
+  width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .new-admin-responsive .new-admin-tabs {
+    left: 0 !important;
+  }
+}
+
+.new-admin-tabs {
+  //background: var(--component-background);
+  //box-shadow: var(--header-light-shadow);
+  z-index: 99;
+}
+
+.new-admin-fixed-body.new-admin-show-tabs .new-admin-content {
+  height: calc(100vh - 88px);
+}
+
+.new-admin-fixed-body .new-admin-content {
+  height: calc(100vh - 48px);
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.new-admin-body .new-admin-content {
+  flex: auto;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+
+.new-admin-body .new-admin-content .new-admin-content-view {
+  flex: auto;
+  box-sizing: border-box;
+}
+
+.new-admin-shade {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2001;
+  transition: background-color .3s cubic-bezier(.2, 0, 0, 1) 0s, left .3s cubic-bezier(.2, 0, 0, 1) 0s;
+  visibility: hidden;
+}
+
+@media screen and (max-width: 768px) {
+  .new-admin-responsive .new-admin-breadcrumb, .new-admin-responsive .new-admin-sidebar-nav {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .new-admin-responsive .new-admin-logo, .new-admin-responsive .new-admin-sidebar {
+    position: fixed !important;
+    left: 0 !important;
+    width: 200px !important;
+    z-index: 2002 !important;
+  }
+}
+
+.new-admin-show-tabs:not(.new-admin-tab-card):not(.new-admin-head-dark) .new-admin-header {
+  box-shadow: 210px -1px 0 var(--border-color-split) inset;
+  transition: padding-left .3s cubic-bezier(.2, 0, 0, 1) 0s, box-shadow .3s cubic-bezier(.2, 0, 0, 1) 0s;
+}
+
+.new-admin-fixed-header:not(.new-admin-fixed-body) {
+  padding-top: 48px;
+}
+
+.new-admin-fixed-sidebar:not(.new-admin-fixed-body).new-admin-fixed-header .new-admin-header {
+  padding-left: 0;
+}
+
+.new-admin-header {
+  display: flex;
+  align-items: center;
+  height: 48px;
+  line-height: 48px;
+  background: $common-background !important;
+  box-shadow: 0 1px 4px rgba(0, 21, 41, .08);
+  background: var(--header-light-background);
+  z-index: 101;
+  box-sizing: border-box;
+  position: relative;
+}
+
+.new-admin-fixed-header:not(.new-admin-fixed-body) .new-admin-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.new-admin-main {
+  display: flex;
+}
+
+.new-admin-show-tabs:not(.new-admin-tab-card):not(.new-admin-head-dark) .new-admin-header {
+  box-shadow: 210px -1px 0 var(--border-color-split) inset;
+  transition: padding-left .3s cubic-bezier(.2, 0, 0, 1) 0s, box-shadow .3s cubic-bezier(.2, 0, 0, 1) 0s;
+}
+
+.new-admin-show-tabs:not(.new-admin-tab-card):not(.new-admin-head-dark) .new-admin-header {
+  box-shadow: 210px -1px 0 var(--border-color-split) inset;
+  transition: padding-left .3s cubic-bezier(.2, 0, 0, 1) 0s, box-shadow .3s cubic-bezier(.2, 0, 0, 1) 0s;
+}
+
+.new-admin-fixed-sidebar:not(.new-admin-fixed-body) .new-admin-sidebar, .new-admin-fixed-sidebar:not(.new-admin-fixed-body) .new-admin-sidebar-nav {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  top: 48px;
+}
+
+.new-admin-responsive.new-admin-collapse .new-admin-sidebar, .new-admin-responsive.new-admin-collapse .new-admin-logo {
+  left: -210px !important;
+  box-shadow: none !important;
+}
+
+@media screen and (max-width: 768px) {
+  .new-admin-responsive .new-admin-sidebar {
+    top: 48px !important;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .new-admin-responsive .new-admin-logo, .new-admin-responsive .new-admin-sidebar {
+    position: fixed !important;
+    left: 0 !important;
+    width: 200px !important;
+    z-index: 2002 !important;
+  }
+
+}
+
+.new-admin-fixed-body .new-admin-sidebar, .new-admin-fixed-body .new-admin-sidebar-nav {
+  height: calc(100vh - 48px);
+}
+
+//.new-admin-sidebar, .new-admin-sidebar>.new-admin-sidebar-menus, .new-admin-sidebar-nav, .new-admin-sidebar-nav>.new-admin-sidebar-nav-menu, .ant-menu-submenu-popup>.ant-menu.ant-menu-vertical {
+//  overflow-y: overlay;
+//  scrollbar-width: thin;
+//  scrollbar-color: var(--sidebar-light-scrollbar-thumb-color) transparent;
+//}
+.new-admin-sidebar {
+  flex-shrink: 0;
+  min-height: calc(100vh - 48px);
+  z-index: 102;
+  background: var(--sidebar-light-background);
+  box-shadow: var(--sidebar-light-shadow);
+  transition: width .3s cubic-bezier(.2, 0, 0, 1) 0s, left .3s cubic-bezier(.2, 0, 0, 1) 0s, box-shadow .3s cubic-bezier(.2, 0, 0, 1) 0s;
+  box-sizing: border-box;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.new-admin-collapse .new-admin-sidebar + .new-admin-body {
+  width: calc(100% - 48px);
+}
+
+
+.new-admin-sidebar + .new-admin-body {
+  width: calc(100% - 210px);
+  transition: width .3s cubic-bezier(.2, 0, 0, 1) 0s;
+}
+
+.new-admin-body {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh - 48px);
+  box-sizing: border-box;
+  width: 100%;
+  background: $new-body-background;
+}
+
+@media screen and (max-width: 768px) {
+  .new-admin-responsive .new-admin-tabs {
+    left: 0 !important;
+  }
+}
+
+.new-admin-tabs {
+  background: #fff;
+  box-shadow: 0 1px 4px rgba(0, 21, 41, .08);;
+  z-index: 99;
+}
+
+.new-admin-fixed-body.new-admin-show-tabs .new-admin-content {
+  height: calc(100vh - 88px);
+}
+
+.new-admin-fixed-body .new-admin-content {
+  height: calc(100vh - 48px);
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+
+body .new-text-center {
+  text-align: center;
+}
+
+.new-text-center {
+  padding: 16px 0;
+}
+
+.new-body.new-body-card {
+  padding-bottom: 0;
+}
+
+.new-body {
+  padding: 16px;
+}
+
+.new-body.new-body-card .ant-card {
+  margin-bottom: 16px;
+}
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+.new-admin-header .new-admin-logo > img {
+  width: 40px;
+  height: 40px;
+}
+
+img {
+  vertical-align: middle;
+  border-style: none;
+}
+
+.new-admin-header .new-admin-logo > img + span {
+  font-weight: 600;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+  font-size: 18px;
+  margin-left: 8px;
+}
+
+.new-admin-logo-dark {
+  background: #001529 !important;
+
+  span {
+    color: #fff !important;
+  }
+}
+
+.ant-tabs {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  //color: $text-color;
+  font-size: 14px;
+  font-variant: tabular-nums;
+  line-height: 1.5715;
+  list-style: none;
+  font-feature-settings: "tnum";
+  display: flex;
+  overflow: hidden;
+}
+
+.new-admin-tabs .ant-tabs-nav .ant-tabs-nav-wrap .ant-tabs-nav-list .ant-tabs-tab {
+  background: none;
+  height: 40px;
+  line-height: 40px;
+  //text-shadow: 0 0 .05px currentcolor;
+  transition: background-color .3s, color .3s;
+  border-radius: 0 !important;
+  border: none;
+  padding: 0 16px;
+  margin: 0;
+}
+
+.new-admin-tabs .ant-tabs-nav-wrap {
+  height: 40px;
+}
+
+.ant-tabs-card > .ant-tabs-nav .ant-tabs-tab-active {
+  background: #f7f0ff !important;
+  border-bottom: 2px solid #712fd1 !important;
+  text-shadow: 0 0 .25px #712fd1 !important;
+
+}
+
+.v-enter-active,
+.v-leave-active {
+  transition: all 0.5s ease;
+}
+
+.v-enter-from,
+.v-leave-to {
+  opacity: 0;
+}
+
+
+// 组合过渡
+.scale-slide-enter-active,
+.scale-slide-leave-active {
+  position: absolute;
+  transition: all 0.85s ease;
+}
+
+.scale-slide-enter-from {
+  left: -100%;
+}
+
+.scale-slide-enter-to {
+  left: 0%;
+}
+
+.scale-slide-leave-from {
+  transform: scale(1);
+}
+
+.scale-slide-leave-to {
+  transform: scale(0.8);
+}
+
+// 缩放过渡
+.scale-enter-active,
+.scale-leave-active {
+  transition: all 0.5s ease;
+}
+
+
+.scale-enter-from,
+.scale-leave-to {
+  opacity: 0;
+  transform: scale(0.9);
+}
+
+.new-admin-header-avatar {
+  display: flex;
+  align-items: center;
+  position: relative;
+  height: 100%;
+  transition: color .2s, background-color .2s;
+  cursor: pointer;
+
+  .ant-avatar {
+    border: 1px solid #712fd1;
+  }
+}
+
+.new-admin-header-avatar:hover {
+  background: #fcfafa;
+}
+
+.ant-table-striped .table-striped td {
+  background-color: #fafafa;
+}
+
+.new-table-tool {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.new-table-tool .new-table-tool-title {
+  flex: auto;
+  margin-top: 6px;
+  margin-bottom: 6px;
+  display: flex;
+  align-items: center;
 }
