--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,16 +1,12 @@
 /* CDN 服务仅供平台体验和调试使用，平台不承诺服务的稳定性，企业客户需下载字体包自行发布使用并做好备份。 */
 @font-face {
-  font-family: "思源宋体 Light";
+  font-family: 'Courier New';
   font-weight: 300;
-  src: url("//at.alicdn.com/wf/webfont/oUdqaQgJTW0y/NdXCR-6ifPCUMahze479P.woff2") format("woff2"),
-  url("//at.alicdn.com/wf/webfont/oUdqaQgJTW0y/phhbPtPR7JIsAcS6TJMrx.woff") format("woff");
+  src: url('//at.alicdn.com/wf/webfont/oUdqaQgJTW0y/NdXCR-6ifPCUMahze479P.woff2') format('woff2'),
+  url('//at.alicdn.com/wf/webfont/oUdqaQgJTW0y/phhbPtPR7JIsAcS6TJMrx.woff') format('woff');
   font-display: swap;
 }
 
-.el-container {
-  height: 100vh;
-  overflow: hidden;
-}
 
 $prefix: common;
 .#{$prefix}-header {
@@ -21,24 +17,25 @@ $prefix: common;
   }
 
   .#{$prefix}-header-title {
-    color: #fff
+    color: #fff;
   }
 }
 
+$new-primary-color: #722ed1;
 $common-background: #fff;
 $new-body-background: #f0f2f5;
 .new-admin-collapse .new-admin-sidebar .ant-menu-inline-collapsed {
   width: 100%;
 }
 
-$text-color: rgba(0, 0, 0, .85);
+$text-color: rgba(0, 0, 0, 0.85);
 .new-admin-fixed-header:not(.new-admin-fixed-body) .new-admin-tabs {
   position: fixed;
   right: 0;
   top: 48px;
   height: 40px;
   z-index: 99;
-  transition: left .3s cubic-bezier(.2, 0, 0, 1) 0s;
+  transition: left 0.3s cubic-bezier(0.2, 0, 0, 1) 0s;
 }
 
 .#{$prefix}-aside {
@@ -68,57 +65,38 @@ $text-color: rgba(0, 0, 0, .85);
     display: flex;
     justify-content: space-between;
   }
-
 }
-
-/**
-水平剧中登陆 flex方法
- */
-.login-wrap {
-
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  background: url("https://api.ixiaowai.cn/mcapi/mcapi2.php") no-repeat;
-}
-
-.login-form {
-  width: 25%;
-  background: #1f1f1f;
-  box-shadow: 12px 12px 12px #333;
-  margin: auto auto auto 100px;
-  padding: 35px 55px 30px 35px;
-  border-radius: 30px;
-}
-
 
 .new-admin-layout {
   background: $new-body-background;
+
+  .ant-layout-header {
+    padding: 0;
+  }
 }
 
 .new-admin-show-tabs:not(.new-admin-tab-card):not(.new-admin-head-dark) .new-admin-header {
   box-shadow: 210px -1px 0 var(--border-color-split) inset;
-  transition: padding-left .3s cubic-bezier(.2, 0, 0, 1) 0s, box-shadow .3s cubic-bezier(.2, 0, 0, 1) 0s;
+  transition: padding-left 0.3s cubic-bezier(0.2, 0, 0, 1) 0s,
+  box-shadow 0.3s cubic-bezier(0.2, 0, 0, 1) 0s;
 }
 
-//.new-admin-responsive .new-admin-body, .new-admin-responsive .new-admin-header {
-//  padding-left: 0 !important;
-//  width: 100% !important;
-//}
-
-.new-admin-responsive.new-admin-show-tabs:not(.new-admin-tab-card):not(.new-admin-head-dark) .new-admin-header {
+.new-admin-responsive.new-admin-show-tabs:not(.new-admin-tab-card):not(.new-admin-head-dark)
+.new-admin-header {
   box-shadow: 0 -1px 0 #f0f0f0 inset !important;
 }
 
 @media screen and (max-width: 768px) {
-  .new-admin-responsive .new-admin-body, .new-admin-responsive .new-admin-header {
+  .new-admin-responsive .new-admin-body,
+  .new-admin-responsive .new-admin-header {
     padding-left: 0 !important;
     width: 100% !important;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .new-admin-responsive.new-admin-collapse .new-admin-sidebar, .new-admin-responsive.new-admin-collapse .new-admin-logo {
+  .new-admin-responsive.new-admin-collapse .new-admin-sidebar,
+  .new-admin-responsive.new-admin-collapse .new-admin-logo {
     left: -210px !important;
     box-shadow: none !important;
   }
@@ -135,9 +113,11 @@ $text-color: rgba(0, 0, 0, .85);
   height: 48px;
   //box-shadow: #fff;
   background: $common-background;
-  transition: width .3s cubic-bezier(.2, 0, 0, 1) 0s, left .3s cubic-bezier(.2, 0, 0, 1) 0s, box-shadow .3s cubic-bezier(.2, 0, 0, 1) 0s;
+  transition: width 0.3s cubic-bezier(0.2, 0, 0, 1) 0s, left 0.3s cubic-bezier(0.2, 0, 0, 1) 0s,
+  box-shadow 0.3s cubic-bezier(0.2, 0, 0, 1) 0s;
   font-weight: 600;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
+  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', Segoe UI Symbol, 'Noto Color Emoji';
   font-size: 18px;
   //color: $common-background;
   white-space: nowrap;
@@ -151,6 +131,7 @@ $text-color: rgba(0, 0, 0, .85);
 }
 
 .new-admin-header .new-admin-header-tool {
+  max-height: 48px;
   display: flex;
   flex-shrink: 0;
   padding: 0 12px;
@@ -158,23 +139,17 @@ $text-color: rgba(0, 0, 0, .85);
 
 .ant-layout-header {
   padding: 0;
-
 }
 
 .new-admin-header .new-admin-breadcrumb {
   flex-shrink: 0;
 }
 
-.new-admin-header .new-admin-header-tool {
-  display: flex;
-  flex-shrink: 0;
-  padding: 0 12px;
-}
 
 .new-admin-header .new-admin-header-tool .new-admin-header-tool-item {
   padding: 0 12px;
   font-size: 14px;
-  transition: color .2s, background-color .2s;
+  transition: color 0.2s, background-color 0.2s;
   cursor: pointer;
 }
 
@@ -182,13 +157,6 @@ $text-color: rgba(0, 0, 0, .85);
   .hidden-sm-and-down {
     display: none !important;
   }
-}
-
-.new-admin-header .new-admin-header-tool .new-admin-header-tool-item {
-  padding: 0 12px;
-  font-size: 14px;
-  transition: color .2s, background-color .2s;
-  cursor: pointer;
 }
 
 .new-admin-sidebar > .new-admin-sidebar-menus {
@@ -249,18 +217,21 @@ $text-color: rgba(0, 0, 0, .85);
   right: 0;
   bottom: 0;
   z-index: 2001;
-  transition: background-color .3s cubic-bezier(.2, 0, 0, 1) 0s, left .3s cubic-bezier(.2, 0, 0, 1) 0s;
+  transition: background-color 0.3s cubic-bezier(0.2, 0, 0, 1) 0s,
+  left 0.3s cubic-bezier(0.2, 0, 0, 1) 0s;
   visibility: hidden;
 }
 
 @media screen and (max-width: 768px) {
-  .new-admin-responsive .new-admin-breadcrumb, .new-admin-responsive .new-admin-sidebar-nav {
+  .new-admin-responsive .new-admin-breadcrumb,
+  .new-admin-responsive .new-admin-sidebar-nav {
     display: none;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .new-admin-responsive .new-admin-logo, .new-admin-responsive .new-admin-sidebar {
+  .new-admin-responsive .new-admin-logo,
+  .new-admin-responsive .new-admin-sidebar {
     position: fixed !important;
     left: 0 !important;
     width: 200px !important;
@@ -270,7 +241,8 @@ $text-color: rgba(0, 0, 0, .85);
 
 .new-admin-show-tabs:not(.new-admin-tab-card):not(.new-admin-head-dark) .new-admin-header {
   box-shadow: 210px -1px 0 var(--border-color-split) inset;
-  transition: padding-left .3s cubic-bezier(.2, 0, 0, 1) 0s, box-shadow .3s cubic-bezier(.2, 0, 0, 1) 0s;
+  transition: padding-left 0.3s cubic-bezier(0.2, 0, 0, 1) 0s,
+  box-shadow 0.3s cubic-bezier(0.2, 0, 0, 1) 0s;
 }
 
 .new-admin-fixed-header:not(.new-admin-fixed-body) {
@@ -287,7 +259,7 @@ $text-color: rgba(0, 0, 0, .85);
   height: 48px;
   line-height: 48px;
   background: $common-background !important;
-  box-shadow: 0 1px 4px rgba(0, 21, 41, .08);
+  box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
   background: var(--header-light-background);
   z-index: 101;
   box-sizing: border-box;
@@ -307,22 +279,26 @@ $text-color: rgba(0, 0, 0, .85);
 
 .new-admin-show-tabs:not(.new-admin-tab-card):not(.new-admin-head-dark) .new-admin-header {
   box-shadow: 210px -1px 0 var(--border-color-split) inset;
-  transition: padding-left .3s cubic-bezier(.2, 0, 0, 1) 0s, box-shadow .3s cubic-bezier(.2, 0, 0, 1) 0s;
+  transition: padding-left 0.3s cubic-bezier(0.2, 0, 0, 1) 0s,
+  box-shadow 0.3s cubic-bezier(0.2, 0, 0, 1) 0s;
 }
 
 .new-admin-show-tabs:not(.new-admin-tab-card):not(.new-admin-head-dark) .new-admin-header {
   box-shadow: 210px -1px 0 var(--border-color-split) inset;
-  transition: padding-left .3s cubic-bezier(.2, 0, 0, 1) 0s, box-shadow .3s cubic-bezier(.2, 0, 0, 1) 0s;
+  transition: padding-left 0.3s cubic-bezier(0.2, 0, 0, 1) 0s,
+  box-shadow 0.3s cubic-bezier(0.2, 0, 0, 1) 0s;
 }
 
-.new-admin-fixed-sidebar:not(.new-admin-fixed-body) .new-admin-sidebar, .new-admin-fixed-sidebar:not(.new-admin-fixed-body) .new-admin-sidebar-nav {
+.new-admin-fixed-sidebar:not(.new-admin-fixed-body) .new-admin-sidebar,
+.new-admin-fixed-sidebar:not(.new-admin-fixed-body) .new-admin-sidebar-nav {
   position: fixed;
   left: 0;
   bottom: 0;
   top: 48px;
 }
 
-.new-admin-responsive.new-admin-collapse .new-admin-sidebar, .new-admin-responsive.new-admin-collapse .new-admin-logo {
+.new-admin-responsive.new-admin-collapse .new-admin-sidebar,
+.new-admin-responsive.new-admin-collapse .new-admin-logo {
   left: -210px !important;
   box-shadow: none !important;
 }
@@ -334,16 +310,17 @@ $text-color: rgba(0, 0, 0, .85);
 }
 
 @media screen and (max-width: 768px) {
-  .new-admin-responsive .new-admin-logo, .new-admin-responsive .new-admin-sidebar {
+  .new-admin-responsive .new-admin-logo,
+  .new-admin-responsive .new-admin-sidebar {
     position: fixed !important;
     left: 0 !important;
     width: 200px !important;
     z-index: 2002 !important;
   }
-
 }
 
-.new-admin-fixed-body .new-admin-sidebar, .new-admin-fixed-body .new-admin-sidebar-nav {
+.new-admin-fixed-body .new-admin-sidebar,
+.new-admin-fixed-body .new-admin-sidebar-nav {
   height: calc(100vh - 48px);
 }
 
@@ -358,7 +335,8 @@ $text-color: rgba(0, 0, 0, .85);
   z-index: 102;
   background: var(--sidebar-light-background);
   box-shadow: var(--sidebar-light-shadow);
-  transition: width .3s cubic-bezier(.2, 0, 0, 1) 0s, left .3s cubic-bezier(.2, 0, 0, 1) 0s, box-shadow .3s cubic-bezier(.2, 0, 0, 1) 0s;
+  transition: width 0.3s cubic-bezier(0.2, 0, 0, 1) 0s, left 0.3s cubic-bezier(0.2, 0, 0, 1) 0s,
+  box-shadow 0.3s cubic-bezier(0.2, 0, 0, 1) 0s;
   box-sizing: border-box;
   position: relative;
   display: flex;
@@ -371,10 +349,9 @@ $text-color: rgba(0, 0, 0, .85);
   width: calc(100% - 48px);
 }
 
-
 .new-admin-sidebar + .new-admin-body {
   width: calc(100% - 210px);
-  transition: width .3s cubic-bezier(.2, 0, 0, 1) 0s;
+  transition: width 0.3s cubic-bezier(0.2, 0, 0, 1) 0s;
 }
 
 .new-admin-body {
@@ -394,7 +371,7 @@ $text-color: rgba(0, 0, 0, .85);
 
 .new-admin-tabs {
   background: #fff;
-  box-shadow: 0 1px 4px rgba(0, 21, 41, .08);;
+  box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
   z-index: 99;
 }
 
@@ -407,7 +384,6 @@ $text-color: rgba(0, 0, 0, .85);
   overflow-x: hidden;
   overflow-y: auto;
 }
-
 
 body .new-text-center {
   text-align: center;
@@ -429,7 +405,9 @@ body .new-text-center {
   margin-bottom: 16px;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
@@ -445,7 +423,8 @@ img {
 
 .new-admin-header .new-admin-logo > img + span {
   font-weight: 600;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
+  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', Segoe UI Symbol, 'Noto Color Emoji';
   font-size: 18px;
   margin-left: 8px;
 }
@@ -467,7 +446,7 @@ img {
   font-variant: tabular-nums;
   line-height: 1.5715;
   list-style: none;
-  font-feature-settings: "tnum";
+  font-feature-settings: 'tnum';
   display: flex;
   overflow: hidden;
 }
@@ -477,7 +456,7 @@ img {
   height: 40px;
   line-height: 40px;
   //text-shadow: 0 0 .05px currentcolor;
-  transition: background-color .3s, color .3s;
+  transition: background-color 0.3s, color 0.3s;
   border-radius: 0 !important;
   border: none;
   padding: 0 16px;
@@ -491,8 +470,7 @@ img {
 .ant-tabs-card > .ant-tabs-nav .ant-tabs-tab-active {
   background: #f7f0ff !important;
   border-bottom: 2px solid #712fd1 !important;
-  text-shadow: 0 0 .25px #712fd1 !important;
-
+  text-shadow: 0 0 0.25px #712fd1 !important;
 }
 
 .v-enter-active,
@@ -504,7 +482,6 @@ img {
 .v-leave-to {
   opacity: 0;
 }
-
 
 // 组合过渡
 .scale-slide-enter-active,
@@ -535,7 +512,6 @@ img {
   transition: all 0.5s ease;
 }
 
-
 .scale-enter-from,
 .scale-leave-to {
   opacity: 0;
@@ -543,14 +519,24 @@ img {
 }
 
 .new-admin-header-avatar {
+  span {
+    padding: 0 4px 0 6px;
+  }
+
   display: flex;
   align-items: center;
   position: relative;
   height: 100%;
-  transition: color .2s, background-color .2s;
+  transition: color 0.2s, background-color 0.2s;
   cursor: pointer;
 
   .ant-avatar {
+    span {
+      padding: 0;
+    }
+
+    background-color: $new-primary-color;
+    font-size: 30px;
     border: 1px solid #712fd1;
   }
 }
@@ -577,3 +563,30 @@ img {
   display: flex;
   align-items: center;
 }
+
+.ant-table-pagination.ant-pagination {
+  margin: 16px 0 0 0 !important;
+}
+
+.ant-image-preview-body {
+  height: 100vh;
+}
+
+.ant-table-scroll .ant-table-body::-webkit-scrollbar-track {
+  background-color: #f7f7f7;
+}
+
+.ant-table-scroll .ant-table-body::-webkit-scrollbar-thumb {
+  background-color: #da0b0b;
+  border-radius: 5px;
+}
+
+.ant-table-scroll .ant-table-body::-webkit-scrollbar-thumb:hover {
+  background-color: #1e8cde;
+}
+
+.ant-table-scroll .ant-table-body::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
