--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,16 +1,11 @@
 @charset "UTF-8";
 /* CDN 服务仅供平台体验和调试使用，平台不承诺服务的稳定性，企业客户需下载字体包自行发布使用并做好备份。 */
 @font-face {
-  font-family: "思源宋体 Light";
+  font-family: "Courier New";
   font-weight: 300;
   src: url("//at.alicdn.com/wf/webfont/oUdqaQgJTW0y/NdXCR-6ifPCUMahze479P.woff2") format("woff2"), url("//at.alicdn.com/wf/webfont/oUdqaQgJTW0y/phhbPtPR7JIsAcS6TJMrx.woff") format("woff");
   font-display: swap;
 }
-.el-container {
-  height: 100vh;
-  overflow: hidden;
-}
-
 .common-header {
   background: rgb(48, 55, 66);
 }
@@ -62,27 +57,11 @@
   justify-content: space-between;
 }
 
-/**
-水平剧中登陆 flex方法
- */
-.login-wrap {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  background: url("https://api.ixiaowai.cn/mcapi/mcapi2.php") no-repeat;
-}
-
-.login-form {
-  width: 25%;
-  background: #1f1f1f;
-  box-shadow: 12px 12px 12px #333;
-  margin: auto auto auto 100px;
-  padding: 35px 55px 30px 35px;
-  border-radius: 30px;
-}
-
 .new-admin-layout {
   background: #f0f2f5;
+}
+.new-admin-layout .ant-layout-header {
+  padding: 0;
 }
 
 .new-admin-show-tabs:not(.new-admin-tab-card):not(.new-admin-head-dark) .new-admin-header {
@@ -95,13 +74,15 @@
 }
 
 @media screen and (max-width: 768px) {
-  .new-admin-responsive .new-admin-body, .new-admin-responsive .new-admin-header {
+  .new-admin-responsive .new-admin-body,
+  .new-admin-responsive .new-admin-header {
     padding-left: 0 !important;
     width: 100% !important;
   }
 }
 @media screen and (max-width: 768px) {
-  .new-admin-responsive.new-admin-collapse .new-admin-sidebar, .new-admin-responsive.new-admin-collapse .new-admin-logo {
+  .new-admin-responsive.new-admin-collapse .new-admin-sidebar,
+  .new-admin-responsive.new-admin-collapse .new-admin-logo {
     left: -210px !important;
     box-shadow: none !important;
   }
@@ -131,6 +112,7 @@
 }
 
 .new-admin-header .new-admin-header-tool {
+  max-height: 48px;
   display: flex;
   flex-shrink: 0;
   padding: 0 12px;
@@ -142,12 +124,6 @@
 
 .new-admin-header .new-admin-breadcrumb {
   flex-shrink: 0;
-}
-
-.new-admin-header .new-admin-header-tool {
-  display: flex;
-  flex-shrink: 0;
-  padding: 0 12px;
 }
 
 .new-admin-header .new-admin-header-tool .new-admin-header-tool-item {
@@ -162,13 +138,6 @@
     display: none !important;
   }
 }
-.new-admin-header .new-admin-header-tool .new-admin-header-tool-item {
-  padding: 0 12px;
-  font-size: 14px;
-  transition: color 0.2s, background-color 0.2s;
-  cursor: pointer;
-}
-
 .new-admin-sidebar > .new-admin-sidebar-menus {
   flex: auto;
   overflow-x: hidden;
@@ -210,6 +179,13 @@
   flex-direction: column;
   box-sizing: border-box;
 }
+
+.new-admin-body .new-admin-content .new-admin-content-view {
+  height: calc(100vh - 88px);
+  flex: auto;
+  box-sizing: border-box;
+}
+
 .new-admin-shade {
   position: fixed;
   top: 0;
@@ -222,12 +198,14 @@
 }
 
 @media screen and (max-width: 768px) {
-  .new-admin-responsive .new-admin-breadcrumb, .new-admin-responsive .new-admin-sidebar-nav {
+  .new-admin-responsive .new-admin-breadcrumb,
+  .new-admin-responsive .new-admin-sidebar-nav {
     display: none;
   }
 }
 @media screen and (max-width: 768px) {
-  .new-admin-responsive .new-admin-logo, .new-admin-responsive .new-admin-sidebar {
+  .new-admin-responsive .new-admin-logo,
+  .new-admin-responsive .new-admin-sidebar {
     position: fixed !important;
     left: 0 !important;
     width: 200px !important;
@@ -281,14 +259,16 @@
   transition: padding-left 0.3s cubic-bezier(0.2, 0, 0, 1) 0s, box-shadow 0.3s cubic-bezier(0.2, 0, 0, 1) 0s;
 }
 
-.new-admin-fixed-sidebar:not(.new-admin-fixed-body) .new-admin-sidebar, .new-admin-fixed-sidebar:not(.new-admin-fixed-body) .new-admin-sidebar-nav {
+.new-admin-fixed-sidebar:not(.new-admin-fixed-body) .new-admin-sidebar,
+.new-admin-fixed-sidebar:not(.new-admin-fixed-body) .new-admin-sidebar-nav {
   position: fixed;
   left: 0;
   bottom: 0;
   top: 48px;
 }
 
-.new-admin-responsive.new-admin-collapse .new-admin-sidebar, .new-admin-responsive.new-admin-collapse .new-admin-logo {
+.new-admin-responsive.new-admin-collapse .new-admin-sidebar,
+.new-admin-responsive.new-admin-collapse .new-admin-logo {
   left: -210px !important;
   box-shadow: none !important;
 }
@@ -299,14 +279,16 @@
   }
 }
 @media screen and (max-width: 768px) {
-  .new-admin-responsive .new-admin-logo, .new-admin-responsive .new-admin-sidebar {
+  .new-admin-responsive .new-admin-logo,
+  .new-admin-responsive .new-admin-sidebar {
     position: fixed !important;
     left: 0 !important;
     width: 200px !important;
     z-index: 2002 !important;
   }
 }
-.new-admin-fixed-body .new-admin-sidebar, .new-admin-fixed-body .new-admin-sidebar-nav {
+.new-admin-fixed-body .new-admin-sidebar,
+.new-admin-fixed-body .new-admin-sidebar-nav {
   height: calc(100vh - 48px);
 }
 
@@ -384,7 +366,9 @@ body .new-text-center {
   margin-bottom: 16px;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
@@ -497,8 +481,16 @@ img {
   transition: color 0.2s, background-color 0.2s;
   cursor: pointer;
 }
+.new-admin-header-avatar span {
+  padding: 0 4px 0 6px;
+}
 .new-admin-header-avatar .ant-avatar {
+  background-color: #722ed1;
+  font-size: 30px;
   border: 1px solid #712fd1;
+}
+.new-admin-header-avatar .ant-avatar span {
+  padding: 0;
 }
 
 .new-admin-header-avatar:hover {
@@ -522,6 +514,32 @@ img {
   margin-bottom: 6px;
   display: flex;
   align-items: center;
+}
+
+.ant-table-pagination.ant-pagination {
+  margin: 16px 0 0 0 !important;
+}
+
+.ant-image-preview-body {
+  height: 100vh;
+}
+
+.ant-table-scroll .ant-table-body::-webkit-scrollbar-track {
+  background-color: #f7f7f7;
+}
+
+.ant-table-scroll .ant-table-body::-webkit-scrollbar-thumb {
+  background-color: #da0b0b;
+  border-radius: 5px;
+}
+
+.ant-table-scroll .ant-table-body::-webkit-scrollbar-thumb:hover {
+  background-color: #1e8cde;
+}
+
+.ant-table-scroll .ant-table-body::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
