--- a/src/assets/styles/common/var.less
+++ b/src/assets/styles/common/var.less
@@ -1,6 +1,7 @@
 @primary-color: var(--ant-primary-color, #18a058);
 @link-color: var(--ant-primary-color, #18a058); // 链接色
 @primary-color-hover: var(--ant-primary-color-hover, red);
+@ant-primary-5: var(--ant-primary-5, #18a058);
 @success-color: #52c41a; // 成功色
 @warning-color: #faad14; // 警告色
 @error-color: #f5222d; // 错误色
@@ -12,7 +13,7 @@
 // @text-color-secondary: rgba(0, 0, 0, 0.45); // 次文本色
 // @disabled-color: rgba(0, 0, 0, 0.25); // 失效色
 // @border-radius-base: 4px; // 组件/浮层圆角
-// @border-color-base: #d9d9d9; // 边框色
+@border-color-base: var(--ant-primary-color, #18a058); // 边框色
 // @box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // 浮层阴影
 // // vertical paddings
 // @padding-lg: 24px; // containers
