--- a/src/assets/styles/style.less
+++ b/src/assets/styles/style.less
@@ -1,9 +1,9 @@
-/* CDN 服务仅供平台体验和调试使用，平台不承诺服务的稳定性，企业客户需下载字体包自行发布使用并做好备份。 */
 @font-face {
-  font-family: 'Courier New';
-  font-weight: 300;
-  src: url('//at.alicdn.com/wf/webfont/oUdqaQgJTW0y/NdXCR-6ifPCUMahze479P.woff2') format('woff2'),
-    url('//at.alicdn.com/wf/webfont/oUdqaQgJTW0y/phhbPtPR7JIsAcS6TJMrx.woff') format('woff');
+  font-family: 'MyFont';
+  font-weight: normal;
+  font-style: normal;
+  src: url('../fonts/仓耳渔阳体.woff') format('woff'),
+    url('../fonts/仓耳渔阳体.woff2') format('woff2');
   font-display: swap;
 }
 
@@ -114,9 +114,8 @@
   background: @common-background;
   transition: width 0.3s cubic-bezier(0.2, 0, 0, 1) 0s, left 0.3s cubic-bezier(0.2, 0, 0, 1) 0s,
     box-shadow 0.3s cubic-bezier(0.2, 0, 0, 1) 0s;
-  font-weight: 600;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', Segoe UI Symbol, 'Noto Color Emoji';
+  // font-weight: 600;
+  font-family: 'MyFont';
   font-size: 18px;
   //color: @common-background;
   white-space: nowrap;
@@ -416,8 +415,7 @@ img {
 
 .new-admin-header .new-admin-logo > img + span {
   font-weight: 600;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', Segoe UI Symbol, 'Noto Color Emoji';
+  font-family: 'MyFont';
   font-size: 18px;
   margin-left: 8px;
 }
