feat: 添加国际化

--- a/src/assets/styles/common/var.less
+++ b/src/assets/styles/common/var.less
@@ -7,20 +7,21 @@
 @error-color: #f5222d; // 错误色
 @font-family: 'Microsoft YaHei', '微软雅黑', 'PingFang SC', 'Helvetica Neue', 'Hiragino Sans GB',
   'SimSun', 'sans-serif';
-// @font-size-base: 14px; // 主字号
-// @heading-color: rgba(0, 0, 0, 0.85); // 标题色
-// @text-color: rgba(0, 0, 0, 0.65); // 主文本色
-// @text-color-secondary: rgba(0, 0, 0, 0.45); // 次文本色
-// @disabled-color: rgba(0, 0, 0, 0.25); // 失效色
-// @border-radius-base: 4px; // 组件/浮层圆角
+@font-size-base: 14px; // 主字号
+@heading-color: rgba(0, 0, 0, 0.85); // 标题色
+@text-color: rgba(0, 0, 0, 0.65); // 主文本色
+@text-color-secondary: rgba(0, 0, 0, 0.45); // 次文本色
+@disabled-color: rgba(0, 0, 0, 0.25); // 失效色
+@border-radius-base: 4px; // 组件/浮层圆角
 @border-color-base: var(--ant-primary-color, #18a058); // 边框色
-// @box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // 浮层阴影
+@box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // 浮层阴影
 // // vertical paddings
 // @padding-lg: 24px; // containers
 // @padding-md: 16px; // small containers and buttons
 // @padding-sm: 8px; // Form controls and items
 // @padding-xs: 8px; // small items
-// @font-family: 'Microsoft YaHei', '微软雅黑', 'PingFang SC', 'Helvetica Neue', 'Hiragino Sans GB', 'SimSun', 'sans-serif';
+// @font-family: 'Microsoft YaHei', '微软雅黑', 'PingFang SC', 'Helvetica Neue', 'Hiragino Sans GB',
+//   'SimSun', 'sans-serif';
 // // Table
 // // --
 // @table-header-bg: @background-color-light;
