--- a/src/assets/styles/common/var.css
+++ b/src/assets/styles/common/var.css
@@ -1,5 +1,5 @@
 :root {
-  --ant-primary-color: #18a058;
+  --ant-primary-color: orange;
   --ant-primary-color-hover: gray;
   /* --ant-primary-color-active: gray; */
   --ant-primary-5: var(--ant-primary-color);
