feat: :memo: 样式

--- a/src/assets/styles/common/var.less
+++ b/src/assets/styles/common/var.less
@@ -5,8 +5,7 @@
 @success-color: #52c41a; // 成功色
 @warning-color: #faad14; // 警告色
 @error-color: #f5222d; // 错误色
-@font-family: 'Microsoft YaHei', '微软雅黑', 'PingFang SC', 'Helvetica Neue', 'Hiragino Sans GB',
-  'SimSun', 'sans-serif';
+@font-family: 'MyFont', 'Microsoft YaHei', '微软雅黑', 'PingFang SC', 'Helvetica Neue', 'sans-serif';
 @font-size-base: 14px; // 主字号
 @heading-color: rgba(0, 0, 0, 0.85); // 标题色
 @text-color: rgba(0, 0, 0, 0.65); // 主文本色
@@ -20,8 +19,6 @@
 // @padding-md: 16px; // small containers and buttons
 // @padding-sm: 8px; // Form controls and items
 // @padding-xs: 8px; // small items
-// @font-family: 'Microsoft YaHei', '微软雅黑', 'PingFang SC', 'Helvetica Neue', 'Hiragino Sans GB',
-//   'SimSun', 'sans-serif';
 // // Table
 // // --
 // @table-header-bg: @background-color-light;
