--- a/src/assets/styles/common/common.less
+++ b/src/assets/styles/common/common.less
@@ -1,6 +1,20 @@
+@font-face {
+  font-family: 'MyFont';
+  font-weight: normal;
+  font-style: normal;
+  src: url('../../fonts/仓耳渔阳体.woff') format('woff'),
+  url('../../fonts/仓耳渔阳体.woff2') format('woff2');
+  //font-display: swap;
+}
+
+body {
+  font-family: @font-family;
+}
+
 a {
   color: @primary-color;
 }
+
 /* 滚动条凹槽的颜色，还可以设置边框属性 */
 *::-webkit-scrollbar-track-piece {
   background-color: #f8f8f8;
