--- a/src/assets/styles/index.less
+++ b/src/assets/styles/index.less
@@ -1,6 +1,5 @@
+@import './common/index.less';
 @import './default/index.less';
-@import './common/common.less';
-@import './common/var.less';
+@import './reset.css';
 @import './style.less';
 @import './transition.less';
-@import './reset.css';
