--- a/src/assets/styles/common/var.css
+++ b/src/assets/styles/common/var.css
@@ -1,7 +1,18 @@
 :root {
-  --ant-primary-color: orange;
-  --ant-primary-color-hover: var(--ant-primary-color);
-  /* --ant-primary-color-active: gray; */
-  --ant-primary-5: var(--ant-primary-color);
-  --ant-primary-color-outline: transparent;
+    --ant-primary-color: #f78b1a;
+    --ant-primary-color-hover: var(--ant-primary-color);
+    /* --ant-primary-color-active: gray; */
+    --ant-primary-5: var(--ant-primary-color);
+    --ant-primary-color-outline: transparent;
+    /* todoList */
+    --primary: #ea40a4;
+    --business: #3a82ee;
+    --personal: var(--primary);
+    --light: #eee;
+    --grey: #888;
+    --dark: #035dbe;
+    --danger: #ff5b57;
+    --shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    --business-glow: 0px 0px 4px rgba(58, 130, 238, 0.75);
+    --personal-glow: 0px 0px 4px rgba(234, 64, 164, 0.75);
 }
