--- a/src/assets/styles/theme/theme.less
+++ b/src/assets/styles/theme/theme.less
@@ -6,7 +6,9 @@
   --box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08); // box-shadow
   --table-fix-title-bg: #f5f5f5; // 表格固定列标题背景色
   --table-hover-row-bg: #f5f5f5; // 表格hover行背景色
+  --input-border-color: #d9d9d9; // input边框颜色
 }
+
 /* 暗色主题 */
 html[data-theme='dark'] {
   --text-color: rgba(229, 224, 216, 0.85);
@@ -16,4 +18,6 @@ html[data-theme='dark'] {
   --tabs-border-bottom: 1px solid;
   --table-fix-title-bg: #2a2a2a;
   --table-hover-row-bg: #2a2a2a;
+  --input-border-color: gray; // input边框颜色
+
 }
