--- a/src/views/applications/style/index.less
+++ b/src/views/applications/style/index.less
@@ -2,6 +2,7 @@ input[type='radio'],
 input[type='checkbox'] {
   display: none;
 }
+
 input:not([type='radio']):not([type='checkbox']),
 button {
   appearance: none;
@@ -38,7 +39,7 @@ h4 {
 
 .greeting .title input {
   margin-left: 0.5rem;
-  flex: 1 1 0%;
+  flex: 1 1 0;
   min-width: 0;
 }
 
@@ -100,8 +101,8 @@ h4 {
   content: '';
   display: block;
   opacity: 0;
-  width: 0px;
-  height: 0px;
+  width: 0;
+  height: 0;
   background-color: var(--business);
   box-shadow: var(--business-glow);
   border-radius: 50%;
@@ -169,6 +170,8 @@ input:checked ~ .bubble::after {
 .todo-item .todo-content input {
   color: var(--dark);
   font-size: 1.125rem;
+  width: 95%;
+  text-overflow: ellipsis;
 }
 
 .todo-item .actions {
